# ai-store

./: .gitignore  CONTRIBUTING.md  README.md
frontend/: .gitignore  README.md  (+1 more)
hub/backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
hub/backend/dip-hub-chart/: values.yaml
hub/backend/dip-hub-chart/templates/: configmap.yaml  deployment.yaml
hub/backend/scripts/: init_db.py
hub/backend/src/: main.py
hub/backend/src/adapters/: application_adapter.py  deploy_manager_adapter.py  external_service_adapter.py  mock_application_adapter.py  mock_external_service_adapter.py  oauth2_adapter.py  session_adapter.py  user_management_adapter.py
hub/backend/src/application/: application_service.py  login_service.py
hub/backend/src/domains/: application.py
hub/backend/src/infrastructure/: container.py
hub/backend/src/infrastructure/config/: settings.py
hub/backend/src/infrastructure/context/: token_context.py
hub/backend/src/infrastructure/database/: init.py
hub/backend/src/infrastructure/middleware/: auth_middleware.py
hub/backend/src/ports/: application_port.py  external_service_port.py  oauth2_port.py  user_management_port.py
hub/backend/src/routers/: application_router.py  login_router.py  logout_router.py  refresh_token_router.py  userinfo_router.py
hub/backend/src/routers/schemas/: application.py  health.py
hub/backend/tests/: conftest.py  test_application.py  test_health.py
hub/backend/tests/integration/: test_health_api.py
hub/backend/tests/unit/: test_health_checker.py  test_health_models.py  test_health_service.py
(+287 files in other folders)
